# hello_rust

./: .gitignore  Cargo.toml
.github/prompts/: update_docs_instruction.prompt.md
copilot/docs/function_calling/: stage1.md
data/: memos.json  weather_memos.json
docs/: README.md
docs/guides/: rust_testing_guide.md
docs/learning/: 2025-09-13_learning_log.md  2025-09-15_learning_log.md  2025-10-05_learning_log.md  qna_log.md
docs/learning/function_calling/: enum_trait_basics.md  stage1.md
docs/projects/: next_project_options.md
docs/projects/function_calling/: README.md  file_split_refactor.md  stage1.md
docs/projects/memo/: README.md  memo_app_guide.md  memo_cli_guide.md  memo_storage_guide.md
docs/projects/task_manager/: README.md  implementation_guide.md
docs/projects/weather/: README.md  weather_memo_app_spec.md  weather_setup_guide.md
docs/prompts/: commit_push_policy.md  update_docs_instruction.md
prompts/: code_comment_style.md  commit_push_policy.md  response_tone_guide.md  update_docs_instruction.md
src/: janken.rs  main.rs  number_guess.rs  openai.rs  openai_function_call.rs  rejanken.rs  todo.rs
src/function_call/: api.rs  errors.rs  play.rs  tools.rs  types.rs
src/memo/: cli.rs  mod.rs  storage.rs  types.rs
src/practice-stage1/: janken.rs  janken2.rs  janken3.rs  todo2.rs
src/task_manager/: mod.rs  play.rs  storage.rs  tools.rs  types.rs
src/weather/: api.rs  mod.rs  play.rs  storage.rs  tools.rs  types.rs
