[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }  # 日時処理用